--- a/bk-web/package.json
+++ b/bk-web/package.json
@@ -12,12 +12,16 @@
   },
   "dependencies": {
     "element-ui": "^2.4.6",
+    "eslint-plugin-vue": "^4.7.1",
+    "json-loader": "^0.5.7",
+    "lodash": "^4.17.10",
     "pug": "^2.0.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "yaml-loader": "^0.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
